set up css, and img directories
co-authored-by: Ryan Broadsword <rbroadsword@gmail.com>
co-authored-by: Sean Keane <keane93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <title>Mythical Beasts</title>
 </head>
+
 <body>
   <h1> Best Beasts in the land!</h1>
-  
+  <div class="Clifford" <h2>Clifford the Big Red Dog</h2>
+    <p>Clifford is a big red boi</p>
+  </div>
+  <div class="Cthulhu" <h2>Cthulhu</h2>
+    <p>C
+  </div>
+  <div class="Garfield" <h2>Garfield</h2>
+  </div>
+
 </body>
+
 </html>
