added columns for styling
co-authored-by: Ryan Broadsword <rbroadsword@gmail.com>
co-authored-by: Sean Keane <keane93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html lang="en-US">
 
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   <title>Mythical Beasts</title>
 </head>
 
 <body>
   <h1> Best Beasts in the land!</h1>
-  <div class="Clifford" <h2>Clifford the Big Red Dog</h2>
-    <p>Clifford is a big red boi</p>
+  <div class="Clifford"> 
+  <h2>Clifford the Big Red Dog</h2>
+    <p>Clifford is a big red boi.</p>
+    <img src="img/clifford.jpg" alt="Big Red Dog">
   </div>
-  <div class="Cthulhu" <h2>Cthulhu</h2>
-    <p>C
+  <div class="Cthulhu">
+   <h2>Cthulhu</h2>
+    <p>Cthulhu just wants a hug, while procuring world domination.</p>
+    <img src="img/ancient_boi.jpg" alt="deep one">
   </div>
-  <div class="Garfield" <h2>Garfield</h2>
+  <div class="Garfield"> 
+  <h2>Garfield</h2>
+    <p>Garfield is sorry for Jon.</p>
+    <img src="img/garfeld.jpg" alt="eternal one">
   </div>
 
 </body>
