border added to images, and other styling tweeks
co-authored-by: Ryan Broadsword <rbroadsword@gmail.com>
co-authored-by: Sean Keane <keane93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
   <h1> Best Beasts in the land!</h1>
+  <p> Welcome to the Shop where we have the best boys! Big Dogs! Scary Monsters! More Scary Monsters!
+  <div class="total">
   <div class="Clifford"> 
   <h2>Clifford the Big Red Dog</h2>
     <p>Clifford is a big red boi.</p>
@@ -23,7 +25,7 @@
     <p>Garfield is sorry for Jon.</p>
     <img src="img/garfeld.jpg" alt="eternal one">
   </div>
-
+  </div>
 </body>
 
 </html>
