Styled Intro section, and more column work
co-authored-by: Ryan Broadsword <rbroadsword@gmail.com>
co-authored-by: Sean Keane <keane93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-  <h1> Best Beasts in the land!</h1>
-  <p> Welcome to the Shop where we have the best boys! Big Dogs! Scary Monsters! More Scary Monsters!
+  <div class="intro">
+    <h1> Best Beasts in the land!</h1>
+    <p> Welcome to the Shop where we have the best boys! Big Dogs! Scary Monsters! More Scary Monsters!</p>
+  </div>  
   <div class="total">
   <div class="Clifford"> 
   <h2>Clifford the Big Red Dog</h2>
